--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start karma.conf.js"
+    "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "author": "sitajaf",
   "license": "ISC",
   "devDependencies": {
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "phantomjs-prebuilt": "^2.1.7"
+    "jasmine": "^2.4.1"
   }
 }
